# wedding_management

./: .copilotignore  .coveragerc  .dockerignore  .env.example  .env.production.example  .flake8  .gitattributes  .gitignore  .hermes.md  .pre-commit-config.yaml  .prettierignore  .pylintrc  .ruff.toml  .secrets.baseline  .vercelignore  AGENTS.md  CLAUDE.md  DOCKER.md  Dockerfile  Dockerfile.dev  ENGINEERING.md  GEMINI.md  LICENSE  Makefile  README.md  backend.mk  codecov.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  docker.mk  entrypoint.sh  frontend_analysis_report.md  generate_secret_key.py  manage.py  mypy.ini  openapi.json  opencode.json  package-lock.json  production.mk  (+14 more)
backend/: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  Makefile  conftest.py  coverage.json  openapi.json  pyproject.toml  pyrightconfig.json  requirements.txt
backend/apps/contracts/: admin.py  models.py
backend/apps/contracts/migrations/: 0001_initial.py  0002_initial.py
backend/apps/core/: __init__.py  admin.py  auth.py  constants.py  dependencies.py  dto.py  exception_handler.py  exceptions.py  logging.py  managers.py  middleware.py  mixins.py  models.py  schemas.py  serializers.py  shortcuts.py  tenant.py  types.py  validators.py  viewsets.py
backend/apps/core/services/: __init__.py  storage_service.py
backend/apps/core/tests/: factories.py  test_auth.py  test_base_model.py  test_commands.py  test_exceptions.py  test_health.py  test_logging.py  test_managers.py  test_middleware.py  test_mixins.py  test_models.py  test_shortcuts.py  test_storage_service.py  test_validators.py
backend/apps/events/: admin.py  apps.py  dependencies.py  mixins.py  models.py  schemas.py  signals.py
backend/apps/events/api/: event_controller.py  wedding_controller.py
backend/apps/events/migrations/: 0001_initial.py
backend/apps/events/services/: __init__.py  event_service.py
backend/apps/events/tests/: conftest.py  factories.py  test_apis.py  test_models.py  test_services.py
backend/apps/finances/: FINANCIAL_INTEGRITY.md  admin.py  api.py  dependencies.py  dto.py  managers.py  models.py  schemas.py  serializers.py  signals.py  urls.py  views.py
backend/apps/finances/api/: __init__.py  budget_controller.py  budgets.py  categories.py  category_controller.py  expense_controller.py  expenses.py  finances_controller.py  installment_controller.py  installments.py
backend/apps/finances/migrations/: 0001_initial.py  0002_initial.py  0003_alter_budgetcategory_managers_and_more.py  0003_alter_budgetcategory_wedding_alter_expense_wedding_and_more.py  0003_expense_name_alter_expense_description.py
backend/apps/finances/models/: __init__.py  budget.py  budget_category.py  category.py  expense.py  installment.py
backend/apps/finances/services/: __init__.py  budget_category_service.py  budget_service.py  expense_service.py  installment_service.py
backend/apps/finances/tests/: conftest.py  factories.py  model_factories.py  test_apis.py  test_bolt_optimizations.py  test_budget_service.py  test_financial_optimizations.py  test_managers.py  test_performance.py
backend/apps/items/: admin.py  apps.py  models.py
backend/apps/items/migrations/: 0001_initial.py  0002_initial.py
backend/apps/logistics/: admin.py  api.py  dependencies.py  dto.py  models.py  schemas.py  serializers.py  urls.py  views.py
backend/apps/logistics/api/: __init__.py  contract_controller.py  contracts.py  item_controller.py  items.py  logistics_controller.py  supplier_controller.py  suppliers.py
backend/apps/logistics/migrations/: 0001_initial.py  0002_add_contract_parent.py  0002_initial.py  0003_alter_contract_managers_alter_item_managers_and_more.py  0003_alter_contract_wedding_alter_item_wedding.py  0003_remove_contract_budget_category.py  0004_add_contract_name.py  0004_remove_item_budget_category_contract_budget_category.py  0005_alter_contract_wedding.py  0005_change_parent_to_protect.py  0006_add_cnpj_validator.py  0006_alter_contract_supplier.py  0007_alter_supplier_state.py  0008_alter_contract_pdf_file.py  0009_alter_contract_pdf_file.py  0010_alter_contract_pdf_file.py
backend/apps/logistics/models/: __init__.py  contract.py  item.py  supplier.py
backend/apps/logistics/services/: __init__.py  contract_service.py  item_service.py  supplier_service.py
backend/apps/logistics/tests/: conftest.py  factories.py  model_factories.py  test_apis.py  test_dto.py
backend/apps/scheduler/: admin.py  api.py  dependencies.py  models.py  schemas.py  serializers.py  services.py  urls.py  views.py
backend/apps/scheduler/api/: __init__.py  event_controller.py  events.py  scheduler_controller.py  task_controller.py  tasks.py
backend/apps/scheduler/migrations/: 0001_initial.py  0002_event_recurrence_rule.py  0002_initial.py  0003_alter_event_wedding.py  0003_event_source_installment.py  0004_alter_event_planner.py  0005_task.py  0006_alter_event_planner_alter_task_planner.py  0007_alter_task_description.py  0008_alter_task_description.py  0009_alter_task_description.py
backend/apps/scheduler/models/: __init__.py  appointment.py  event.py  task.py
backend/apps/scheduler/services/: __init__.py  appointments.py  events.py  tasks.py  templates.py
backend/apps/scheduler/tests/: appointment_factories.py  conftest.py  factories.py  model_factories.py  test_apis.py
backend/apps/suppliers/: admin.py  models.py
backend/apps/suppliers/migrations/: 0001_initial.py
backend/apps/tenants/: admin.py  apps.py  managers.py  mixins.py  models.py
backend/apps/tenants/migrations/: 0001_initial.py
backend/apps/users/: __init__.py  admin.py  api.py  apps.py  auth.py  forms.py  models.py  schemas.py  serializers.py  signals.py  types.py  urls.py  views.py
backend/apps/weddings/: __init__.py  admin.py  api.py  dependencies.py  deps.py  dto.py  models.py  schemas.py  serializers.py  services.py  urls.py  views.py
backend/config/: __init__.py  api.py  asgi.py  settings.py  urls.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py  production.py  test.py
docs/: API.md  (+15 more)
(+1138 files in other folders)
